# feedback-triage-app

./: .containerignore  .dockerignore  .env.example  .gitattributes  .gitignore  .grype.yaml  .lycheeignore  .pre-commit-config.yaml  .prettierignore  .repo-doctor.toml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  README.md  Taskfile.yml  _typos.toml  alembic.ini  container-structure-test.yml  docker-compose.yml  lychee.json  lychee_pairs.txt  mkdocs.yml  pyproject.toml  railway.toml  release-please-config.json  tailwind.config.cjs  trivy.yaml
.devcontainer/: devcontainer.json
.github/: SKILL.md  copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  bandit.yml  cache-cleanup.yml  ci-gate.yml  commit-lint.yml  container-build.yml  container-scan.yml  coverage.yml  dependency-review.yml  devcontainer-build.yml  docs-build.yml  docs-deploy.yml  doctor-all.yml  known-issues-check.yml  labeler.yml  license-check.yml  link-checker.yml  lint-format.yml  nightly-security.yml  pr-title.yml  pre-commit-update.yml  regenerate-files.yml  release-please.yml  release.yml  repo-doctor.yml  sbom.yml  scorecard.yml  security-audit.yml  security-codeql.yml  smoke-test.yml  spellcheck-autofix.yml  spellcheck.yml  stale.yml  test.yml  todo-check.yml  type-check.yml  welcome.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_feedback_item.py  0002_v2_a_auth_tenancy_email_log.py  0003_v2_b_backfill_flip_rename.py  0004_v2_b2_workflow_tables.py  0005_workspace_public_submit_flag.py  0006_users_theme_preference.py  0007_email_status_webhook_values.py  0008_feedback_assignee_user.py
attic/: README.md
docs/: USING_THIS_TEMPLATE.md  index.md  known-issues.md  releasing.md  repo-layout.md  tool-comparisons.md  tooling.md  workflows.md
docs/adr/: 001-src-layout.md  006-pytest-for-testing.md  007-mypy-for-type-checking.md  014-no-template-engine.md  021-automated-release-pipeline.md  025-container-strategy.md  027-database-strategy.md  029-testing-strategy.md  031-script-conventions.md  032-dependency-grouping-strategy.md  037-git-configuration-as-code.md  038-vscode-workspace-configuration-strategy.md  045-single-table-data-model.md  046-postgres-enums-and-check-constraints.md  047-sqlmodel-over-sqlalchemy.md  048-session-per-request.md  049-offset-pagination.md  050-sync-db-driver-v1.md  051-static-html-vanilla-js.md  052-api-versioning.md  053-migrations-as-pre-deploy-command.md  054-postgres-for-tests.md  055-uv-as-project-manager.md  056-style-guide-page.md  057-brand-vs-repo-naming.md  058-tailwind-via-standalone-cli.md  059-auth-model.md  060-multi-tenancy-workspace-scoping.md  061-resend-email-fail-soft.md  062-v1-to-v2-data-migration.md  063-status-enum-extension.md  064-pain-vs-priority-dual-fields.md  076-use-react-island-for-dashboard-widgets.md  README.md
docs/adr/archive/: 011-repository-guard-pattern.md  015-no-github-directory-readme.md  036-diagnostic-tooling-strategy.md  039-developer-onboarding-automation.md  040-v1-release-readiness.md  041-env-inspect-web-dashboard.md  042-script-smoke-testing.md  043-collector-plugin-architecture.md  README.md
docs/design/: architecture.md
docs/development/: dev-setup.md  developer-commands.md
docs/guide/: dashboard-guide.md  entry-points.md  troubleshooting.md
docs/notes/: README.md  archive.md  buying-a-domain.md  css-learning.md  custom-css-architecture.md  domain-and-cloudflare.md  frontend-conventions.md  how-deployment-works.md  post-launch-checklist.md  railway-learning.md  script-conventions.md  todo.md  webapp-tooling.md
docs/project/: deployment-notes.md  implementation.md  questions.md  railway-setup.md
docs/project/spec/: core-idea.md  spec-v1.md  spec-v2.md  spec.md
docs/reference/: commands.md
docs/screenshots/: README.md
docs/templates/: pull-request-draft.md
mkdocs-hooks/: include_templates.py
repo_doctor.d/: README.md  ci.toml  db.toml  python.toml
scripts/: .instructions.md  README.md  _imports.py  _ui.py  apply-labels.sh  bootstrap.py  branch_preflight.py  build_css.py  check_todos.py  customize.py  db_dump.py  db_restore.py  doctor.py  email_replay.py  env_doctor.py  generate_command_reference.py  seed.py  seed_workspace.py
scripts/_env_collectors/: container.py  git_info.py  project.py  venv.py
scripts/precommit/: bump_script_version.py  check_local_imports.py
src/: ENTRY_POINTS.md  README.md
src/feedback_triage/: __init__.py  _version.py  config.py  crud.py  database.py  entry_points.py  enums.py  errors.py  main.py  middleware.py  models.py  schemas.py  templating.py
src/feedback_triage/api/: __init__.py
src/feedback_triage/auth/: __init__.py  cookies.py  deps.py  feature_flag.py  hashing.py  schemas.py  service.py  sessions.py  tokens.py
src/feedback_triage/email/: __init__.py  client.py
src/feedback_triage/models/: __init__.py  auth_rate_limits.py  email_log.py  feedback.py  feedback_notes.py  feedback_tags.py  invitations.py  memberships.py  sessions.py  submitters.py  tags.py  tokens.py  users.py  workspaces.py
src/feedback_triage/pages/: __init__.py  auth.py  changelog.py  dashboard.py  feedback_detail.py  inbox.py  insights.py  landing.py  legal.py  roadmap.py  (+6 more)
tests/: conftest.py  test_config.py  test_errors.py  test_feedback_api.py  test_health.py  test_pages.py  test_smoke.py  test_templating.py
tests/api/: test_changelog_page.py  test_dashboard_summary.py  test_feature_auth_flag.py  test_feedback_v2.py  test_isolation.py  test_notes.py  test_public_changelog.py  test_public_roadmap.py  test_public_submit.py  test_resend_webhook.py  test_roadmap_page.py  test_session_per_request.py  test_stale_filter.py  test_status_change_email.py  test_submitters.py  test_tags.py  test_users_preferences.py  test_workspace_settings.py
tests/db/: __init__.py  test_migration_b_roundtrip.py
tests/e2e/: __init__.py  conftest.py  test_a11y.py  test_feedback_smoke.py  test_public_pages_smoke.py  test_signup_flow.py
tests/integration/: test_email_log_replay.py
tools/dev_tools/: dev_all_supervisor.py  test_db_reset.py
(+173 files in other folders)
