# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ============================================================================
# PROJECT METADATA
# ============================================================================
[project]
name = "feedback-triage-app"
dynamic = ["version"]                   # Version derived from git tags via hatch-vcs
description = "Portfolio-grade FastAPI + PostgreSQL app for triaging customer feedback."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Joseph"}]

keywords = [
    "fastapi",
    "postgres",
    "sqlmodel",
    "feedback",
    "triage",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# Runtime dependencies — keep this list tight. Anything that runs in the
# Railway image lives here. Dev/test/docs/extras live under
# [project.optional-dependencies].
dependencies = [
    "fastapi[standard]>=0.115",       # Web framework + uvicorn
    "sqlmodel>=0.0.22",               # ORM (Pydantic + SQLAlchemy)
    "sqlalchemy>=2.0",                # Pin floor; sqlmodel pulls a 2.x
    "alembic>=1.13",                  # Migrations
    "psycopg[binary]>=3.2",           # Postgres driver (sync)
    "pydantic>=2.7",                  # Validation
    "pydantic-settings>=2.4",         # Settings via env vars
]

[project.urls]
Homepage = "https://github.com/JoJo275/feedback-triage-app"
Repository = "https://github.com/JoJo275/feedback-triage-app"
Documentation = "https://JoJo275.github.io/feedback-triage-app/"
Changelog = "https://github.com/JoJo275/feedback-triage-app/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/JoJo275/feedback-triage-app/issues"

# Console scripts. The fta-* names are the project-bound rename of the
# template's spb-* helpers. The underlying scripts in scripts/ are
# retained as general-purpose dev tooling. Wired up in a follow-up after
# Phase 1, once we confirm which diagnostic helpers earn their keep here.
# [project.scripts]
# fta-doctor = "feedback_triage.entry_points:doctor"

# ============================================================================
# OPTIONAL DEPENDENCY GROUPS
# ============================================================================
[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "httpx>=0.27",                    # FastAPI TestClient transport
    "anyio>=4.4",                     # async backend
]
e2e = [
    "playwright>=1.47",
    "pytest-playwright>=0.5",
]
dev = [
    "feedback-triage-app[test]",
    "ruff>=0.11",
    "mypy>=1.20",
    "pre-commit>=4.0",
    "bandit>=1.9",
    "commitizen>=4.4",
    "deptry>=0.25",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.4",
    "pymdown-extensions>=10.21",
    "mkdocstrings[python]>=0.27",
]
# Tool group used by tools/dev_tools/env_dashboard. Retained from template
# as general-purpose dev tooling per project guidelines.
dashboard = [
    "fastapi[standard]>=0.115",
]

# ============================================================================
# HATCH BUILD CONFIG
# ============================================================================
# Hatchling auto-discovers src/feedback_triage/. We do NOT bundle scripts/,
# tools/, or repo_doctor.d/ in the wheel — those are dev-only tooling and
# stay out of the Railway image.

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"

[tool.hatch.build.hooks.vcs]
version-file = "src/feedback_triage/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_triage"]

[tool.hatch.build.targets.sdist]
include = [
    "src/feedback_triage",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

# -- Pytest --
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    "error::DeprecationWarning",
]
markers = [
    "e2e: end-to-end Playwright smoke tests (gated, opt-in via task test:e2e)",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# -- Coverage --
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/feedback_triage/_version.py",
    "*/feedback_triage/static/*",
]

[tool.coverage.paths]
source = [
    "src/feedback_triage",
    "*/feedback_triage",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]

# -- Ruff (linter/formatter) --
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "scripts"]
extend-exclude = ["attic", "tools", "mkdocs-hooks"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "D",
    "T20", "B", "C4", "SIM", "PTH", "PERF", "RUF",
]
ignore = [
    "E501",   # Line length — formatter handles it
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # Conflicts with D211
    "D213",   # Conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/feedback_triage/_version.py" = ["UP006", "UP007", "UP035", "I001", "RUF022"]
"tests/**" = ["T20", "D"]
"scripts/**" = ["T20", "D"]
"scripts/_colors.py" = ["T20", "D", "RUF002", "RUF003"]
"experiments/**" = ["T20", "D"]
"alembic/versions/**" = ["D", "E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["feedback_triage"]

# -- Mypy (type checker) --
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/feedback_triage"]
exclude = "(attic/|tools/|mkdocs-hooks/|alembic/versions/)"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -- Bandit (security linter) --
[tool.bandit]
exclude_dirs = ["tests", ".venv", "attic"]
skips = ["B101"]
targets = ["src"]

# -- deptry (dependency hygiene) --
[tool.deptry]
extend_exclude = ["scripts", "experiments", "docs", "site", "tools", "attic", "alembic"]
pep621_dev_dependency_groups = ["test", "e2e", "dev", "docs", "dashboard"]
ignore = ["DEP004"]
package_module_name_map = { pipdeptree = "pipdeptree", mkdocs = "mkdocs", mkdocs-material = "material", pymdown-extensions = "pymdownx", mkdocstrings = "mkdocstrings", "psycopg[binary]" = "psycopg", "fastapi[standard]" = "fastapi", "mkdocstrings[python]" = "mkdocstrings" }

# -- Commitizen --
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true               # Pre-1.0 during initial build-out
